GNOME Bugzilla – Bug 773115
MetaOnscreenNative: fix mirror mode with stage views
Last modified: 2016-10-19 14:27:56 UTC
see patch
Created attachment 337876 [details] [review] MetaOnscreenNative: fix mirror mode with stage views Using the view's MetaMonitorInfo to find all the crtcs which should be configured to display a given onscreen doesn't work unfortunately. The association runs only the other way around, i.e. we need to go through each crtc and find the ones corresponding to our monitor info.
Review of attachment 337876 [details] [review]: Oh, I see. A bit awkward I guess. Any reason why we can't add the mirrored MetaOutput's to their corresponding "logical_monitor"?
(In reply to Jonas Ådahl from comment #2) > Oh, I see. A bit awkward I guess. Any reason why we can't add the mirrored > MetaOutput's to their corresponding "logical_monitor"? I guess we could, it's just the way this code was structured. I think the rationale is that the number of objects (crtcs in this case) is always small enough that iterating through all of them isn't a big deal, although the same argument could be used to add a list of crtcs to MetaMonitorInfo in this case. Attachment 337876 [details] pushed as 1d4a5a7 - MetaOnscreenNative: fix mirror mode with stage views
*** Bug 773225 has been marked as a duplicate of this bug. ***